# GameProject

./: .gitignore
project/src/: CMakeLists.txt  make32Bit.bat  make64Bit.bat
project/src/CMake/: library.cmake  raspberrypi.cmake  windows.cmake
project/src/Data/: Engine.cfg
project/src/Data/Meshes/: Cylinder.mesh  UnitCube.mesh
project/src/Data/Scripts/: test.ocp
project/src/Data/Shaders/: BlitShader.vs.glsl  default.fs.crash.glsl  gbuffer.fs.glsl  gbuffer.gs.glsl  text.fs.glsl
project/src/Data/Shaders/Asteroids/: ast.fs.glsl
project/src/Data/Shaders/test/: test.fs.glsl
project/src/app/: CMakeLists.txt  ExceptionHandling.cpp  ExceptionHandling.hpp  main.cpp
project/src/app/Blender Plugin/: export_skeleton.py
project/src/app/Engine/: Engine.hpp  TemporaryStorage.hpp  ThreadManager.cpp  ThreadManager.hpp
project/src/app/Engine/Core/: Camera.hpp  Console.hpp  Settings.cpp  Settings.hpp
project/src/app/Engine/Graphics/: FullscreenQuad.cpp  Graphics.hpp  Gui.cpp  Gui.hpp  GuiInputMapping.hpp  GuiItem.cpp  GuiItem.hpp  ShaderContainer.hpp  SkyDome.cpp
project/src/app/Engine/Graphics/Gui/: Cursor.cpp  Cursor.hpp  Label.hpp  Panel.cpp  ScrollArea.cpp  ScrollArea.hpp  ScrollBar.cpp  TabView.cpp  Text.hpp  TextArea.cpp  TextureView.cpp
project/src/app/Engine/Graphics/Mesh/: Animation.cpp  MirrorMesh.hpp
project/src/app/Engine/Graphics/Textures/: Texture2DReference.cpp
project/src/app/Engine/Input/: Input.cpp  Input.hpp
project/src/app/Engine/Interfaces/: ICMesh.hpp
project/src/app/Engine/Utils/: MemoryBuffer.hpp
project/src/app/Game/: Editor.cpp  Editor.hpp  GameObject.hpp  IMap.hpp  MainMenu.cpp  PhysicsParticle.hpp  RenderBatch.cpp  RenderBatch.hpp  ShaderSettings.hpp
project/src/app/Game/Asteroids/: Asteroid.cpp  Asteroid.hpp  Bullet.cpp  Bullet.hpp  Ship.cpp  Ship.hpp
project/src/app/Game/Editor/: 3dViewGizmo.cpp  EnvironmentEditor.cpp  FileDialog.hpp  ToolSelector.cpp
project/src/app/Game/Editor/Toolbox/: MapHierarchy.hpp  SkyEdit.cpp  SkyEdit.hpp
project/src/app/Game/MapObjects/: Cell.hpp  Map.cpp  Sky.cpp  Terrain.cpp  Terrain.hpp
project/src/app/NoCompile/: PhysicsShapesShader.hpp  Reflection.hpp
project/src/app/NoCompile/Core/: AssetManager.hpp  CoreGlobals.hpp
project/src/app/NoCompile/Core/Assets/: GameFile.hpp  RenderLayer.hpp
project/src/app/NoCompile/Core/System/: LibraryLoader.hpp
project/src/app/NoCompile/Exceptions/: Exceptions.cpp
project/src/app/NoCompile/Game/: Menu.cpp
project/src/app/NoCompile/Game/Components/: TransformComponent.hpp
project/src/app/NoCompile/Game/GUI/: DefaultTextShader.hpp
project/src/app/NoCompile/Loader/: MapLoader.cpp  MapLoader.hpp
project/src/app/ResourceFiles/: MeshFormat.txt
project/src/apps/: CMakeLists.txt
project/src/apps/gameProject/: CMakeLists.txt  Debug.cpp  FileStructs.hpp  IEditorAccess.hpp  main.cpp
project/src/apps/gameProject/Blender Plugin/: export_mesh.py
project/src/apps/gameProject/Engine/: Engine.cpp
project/src/apps/gameProject/Engine/Core/: Allocator.hpp  Console.cpp  Grid.hpp
project/src/apps/gameProject/Engine/Graphics/: GuiTheme.hpp  SkyDome.hpp
project/src/apps/gameProject/Engine/Interfaces/: ICamera.hpp  ISettings.hpp
project/src/apps/gameProject/Game/: Camera.cpp  CameraInput.cpp  CameraInput.hpp  CameraPath.hpp  Game.cpp  Game.hpp  GameObject.cpp  PhysicsParticle.cpp  Player.hpp
project/src/apps/gameProject/Game/Asteroids/: AsteroidsMap.cpp  AsteroidsMap.hpp
project/src/apps/gameProject/Game/Editor/: EditorKeyBinds.hpp  FileDialog.cpp  ToolSelector.hpp
project/src/apps/gameProject/Game/MapObjects/: Cell.cpp  DataTags.hpp  Map.hpp  Scene.cpp  Sky.hpp
project/src/apps/gameProject/NoCompile/Core/: Core.hpp  CoreGlobals.cpp
project/src/apps/gameProject/NoCompile/Game/: Camera.cpp  Camera.hpp  GameObject.cpp
project/src/apps/gameProject/NoCompile/Loader/: EditLoader.hpp  IAssetManager.hpp  IEdit.hpp
project/src/apps/gameProject/NoCompile/Script/: OcParsable.cpp
project/src/apps/gameProject/ResourceFiles/: Script.txt
project/src/apps/server/: CMakeLists.txt
project/src/apps/server/src/: main.cpp
project/src/libs/: CMakeLists.txt
project/src/libs/AssetLib/: CMakeLists.txt
project/src/libs/AssetLib/include/AssetLib/: AssetLib.hpp  ModelStructs.hpp
project/src/libs/AssetLib/src/: FileLoader.cpp  ModelLoader.cpp  ModelStructs.cpp  ObjLoader.cpp  TextureLoader.cpp  Tinyxml.cpp
project/src/libs/AssetLib/src/Collada/: ColladaLoader.cpp  ColladaLoader.hpp
project/src/libs/AssetLib/src/Save/: MeshWriter.cpp  WriteVeresion.hpp  WriteVersion_2_0.cpp  WriteVersion_2_1.cpp
project/src/libs/Config/: CMakeLists.txt
project/src/libs/Config/include/Config/: Config.hpp
project/src/libs/Config/src/: Config.cpp
project/src/libs/Core/: CMakeLists.txt
project/src/libs/Core/include/AssetHandling/: AssetManager.cpp  AssetManager.hpp
project/src/libs/Core/include/Core/: FormattedString.hpp  String.hpp  System.hpp
project/src/libs/Core/src/: FormattedString.cpp  LibraryLoader.cpp  String.cpp  System.cpp  System_Common.cpp  System_Unix.cpp  System_Win.cpp  System_os.hpp
project/src/libs/Network/: CMakeLists.txt
project/src/libs/Network/include/Network/: NetSocket.hpp
project/src/libs/Network/src/: NetSocket_Unix.cpp  NetSocket_Win.cpp  OsSocket.hpp
project/src/libs/PhysicsEngine/: CMakeLists.txt
project/src/libs/PhysicsEngine/src/: CollisionFuncs.cpp  CollisionFuncs.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  RigidBody.hpp  SAT.cpp  SAT.hpp  StaticObject.hpp
project/src/libs/PhysicsEngine/src/Shapes/: AABBShape.hpp  OOBBShape.hpp  PlaneShape.hpp  SphereShape.hpp
project/src/libs/RenderEngine/: CMakeLists.txt
project/src/libs/RenderEngine/include/RenderEngine/: IAnimatedMesh.hpp  IFont.hpp  IMaterial.hpp  IRenderEngine.hpp  IShaderObject.hpp  ITexture.hpp
project/src/libs/RenderEngine/src/: BuildOptions.hpp  ReGlobal.hpp  RenderEngine.cpp  RenderEngine.hpp
project/src/libs/RenderEngine/src/Assets/: Buffer_gl.cpp  (+16 more)
project/src/test/Physics/: PhysicsShapeCollisionTests.cpp
project/src/test/TestFiles/: Test.out2
(+868 files in other folders)
